tests/NormalTests/paczka2/big_fuzzy/59692200.err
Error in line 5: yfDusLriPbO A285 -1,8
Error in line 3: eWNma6lOQxM A285 98,6
Error in line 1: yfDusLriPbO A285 5,1
Error in line 10: S26 A285 135,66
Error in line 9: yfDusLriPbO S26 95,6
Error in line 16: S26 A285 26,3
Error in line 18: S26 S135 56,6
Error in line 24: eWNma6lOQxM S135 33,3
Error in line 26: eWNma6lOQxM S26 2,4
Error in line 38: YbqSlYir A797 1,2
Error in line 57: eWNma6lOQxM S135 90,7
Error in line 61: YbqSlYir S135 47,3
Error in line 65: eWNma6lOQxM A797 36,7
Error in line 73: sryLVsId S135 165
Error in line 81: eWNma6lOQxM S135 92,5
Error in line 85: YbqSlYir S26 7,0
Error in line 87: YbqSlYir S135 93,9
Error in line 97: MdE S26 15,6
Error in line 101: YbqSlYir S26 95,2
Error in line 111: sryLVsId S26 8,6
Error in line 129: eWNma6lOQxM S26 38,8
Error in line 125: MdE S135 83,1
Error in line 139: yfDusLriPbO A797 56,8
Error in line 133: eWNma6lOQxM A797 56,6
Error in line 145: yfDusLriPbO S26 278,2
Error in line 152: eWNma6lOQxM S26 17,0
Error in line 160: MdE S26 89,7
Error in line 161: MdE A797 511,3
Error in line 177: yfDusLriPbO S135 37,3
Error in line 180: S26 S135 67,2
Error in line 186: yfDusLriPbO A285 56,9
Error in line 173: AJjCVgALmoK S135 37,6
Error in line 188: MdE A285 54,2
Error in line 202: AJjCVgALmoK A285 47,0
Error in line 197: S26 S135 2,9
Error in line 223: sryLVsId A797 38,0
Error in line 230: S26 S26 37,1
Error in line 225: sryLVsId S135 7,1
Error in line 221: eWNma6lOQxM A797 232,2
Error in line 232: S26 A285 92,3
Error in line 245: YbqSlYir A285 28,7
Error in line 247: YbqSlYir S26 28,5
Error in line 243: eWNma6lOQxM S135 31,3
